[package]
authors = ["Sunrin SHIMURA (keen) <3han5chou7@gmail.com>", "Lucas Zanella <me@lucaszanella.com>"]
name = "www-authenticate"
version = "0.3.0"
license = "MIT"
edition = "2018"
description = "missing HTTP WWW-Authenticate header parser/printer for hyper 0.11.x. 0.1.x for hyper 0.10.y, 0.2.x for hyper 0.11.y and 0.3.x for hyperx"
readme = "README.md"
documentation = "http://docs.rs/www-authenticate"
repository = "https://github.com/KeenS/www-authenticate"
keywords = ["http", "hyper", "hyperium", "authentication"]
categories = ["web-programming::http-client", "web-programming::http-server"]

[features]
default = ["hash_digest"]
hash_digest = ["md-5", "sha-1", "sha2", "digest", "hex"]

[dependencies]
url = "1.5"
base64 = "0.13.0"
md-5 = { version = "0.9.1", optional = true }
sha-1 = { version = "0.9.4", optional = true }
sha2 = { version = "0.9.3", optional = true }
hex = { version = "0.4", optional = true }
digest = {version = "0.9.0" , optional = true }
percent-encoding = "2.1.0"
unicase = "2.0"